# openapi/restapi/operations/wash_servers/signup.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-
-	"sbp/internal/logic/entities"
-)
-
-// SignupHandlerFunc turns a function with the right signature into a signup handler
-type SignupHandlerFunc func(SignupParams, *entities.Auth) SignupResponder
-
-// Handle executing the request and returning a response
-func (fn SignupHandlerFunc) Handle(params SignupParams, principal *entities.Auth) SignupResponder {
-	return fn(params, principal)
-}
-
-// SignupHandler interface for that can handle valid signup params
-type SignupHandler interface {
-	Handle(SignupParams, *entities.Auth) SignupResponder
-}
-
-// NewSignup creates a new http.Handler for the signup operation
-func NewSignup(ctx *middleware.Context, handler SignupHandler) *Signup {
-	return &Signup{Context: ctx, Handler: handler}
-}
-
-/*
-	Signup swagger:route POST /signup wash_servers signup
-
-Signup signup API
-*/
-type Signup struct {
-	Context *middleware.Context
-	Handler SignupHandler
-}
-
-func (o *Signup) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewSignupParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal *entities.Auth
-	if uprinc != nil {
-		principal = uprinc.(*entities.Auth) // this is really a entities.Auth, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
